--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     ---------------------------------------------------------------
     Add your name to this file below:
-    NAME: 
+    NAME: Marci Jones
     ---------------------------------------------------------------
 */
 
@@ -24,6 +24,8 @@
 
     /* Font Stacks */
     /* add the two font stacks here */
+	--heading-fonts: 'Seymour One', Impact, sans-serif;
+	--body-fonts: Lato, Arial, sans-serif;
 }
 
 body{
@@ -31,6 +33,10 @@ body{
 	/* Set the line height to 1.5 */
 	/* set the font size to 1.1rem	*/
 	/* set the font color to #222 (--dk-gray) */
+	font-family: var(--body-fonts);
+	line-height: 1.5;
+	font-size: 1.5rem;
+	color: var(--dk-gray);
 	margin: 0;
 	padding: 0;
 }
@@ -44,7 +50,9 @@ header{
 
 h1, h2, h3{
 	/* center align the text */
+	text-align: center;
 	/* use a web font here (instructions on page) */
+	font-family: var(--heading-fonts);
 	/* make the heading text all small caps style */
 }
 
